<resources>
    <string name="app_name">My Travel Diary</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">이메일</string>
    <string name="prompt_password">비밀번호</string>
    <string name="prompt_password_check">비밀번호 확인</string>
    <string name="action_sign_in">회원가입하기</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">이메일을 입력해주세요</string>
    <string name="invalid_password">비밀번호를 6자 이상 입력해주세요</string>
    <string name="invalid_password_short">*비밀번호는 6자 이상</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_log_in">로그인하기</string>
    <string name="admob_app_id">ca-app-pub-6115246962989534~3486970594</string>
    <string name="banner_ad_unit_id">ca-app-pub-6115246962989534/7597250777</string>
    <string name="banner_ad_test">ca-app-pub-3940256099942544/6300978111</string>

    <string-array name="album_edit">
        <item>"페이지 추가"</item>
        <item>"페이지 수정"</item>
        <item>"페이지 삭제"</item>
        <item>"편집 취소"</item>
    </string-array>

    <string-array name="profile_edit">
        <item>"프로필 업로드"</item>
        <item>"프로필 초기화"</item>
        <item>"편집 취소"</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
