<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".RegisterEmailActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#F0F0F0"
        >

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="이메일로 시작하기"
            android:gravity="center"
            android:textSize="18dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">

      <!--  <ProgressBar
            android:id="@+id/progress"
            android:layout_width="350dp"
            android:layout_height="5dp"
            android:max="100"
            android:progress="0"
            android:outlineSpotShadowColor="@color/colorAccent"
            style="@android:style/Widget.ProgressBar.Horizontal"/>-->

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="316dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEditText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="5dp"
            android:selectAllOnFocus="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:text="*본인의 이메일을 정확히 입력해주세요. 비밀번호 분실시, 재발급 및 중요 공지사항 등의 안내를 받기 위해 이용됩니다."
        android:textColor="#DD4C39"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="316dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEditText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:layout_marginBottom="2dp"
            android:selectAllOnFocus="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_pw_exception"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/invalid_password_short" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="316dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEditText_passwordcheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_password_check"
            android:hint="@string/prompt_password_check"
            android:inputType="textPassword"
            android:layout_marginBottom="5dp"
            android:selectAllOnFocus="true"/>
    </com.google.android.material.textfield.TextInputLayout>



    <CheckBox
        android:id="@+id/CheckBox_terms"
        android:checked="false"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:text="개인정보처리방침 및 이용약관을 읽고 동의합니다."
        />

    <Button
        android:id="@+id/Button_login_check"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:textSize="18dp"
        android:textColor="#ffffff"
        android:background="#62757B"
        android:layout_margin="5dp" />

</LinearLayout>