<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <!--광고넣을 레이아웃-->
<!--    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:layout_weight="1">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />

    </LinearLayout>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="8"
        android:layout_marginTop="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="316dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_email"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="5dp"
                android:selectAllOnFocus="true"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="316dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_password"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:layout_marginBottom="50dp"
                android:selectAllOnFocus="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--enabled : 버튼 비활성화 시키기-->
        <Button
            android:id="@+id/Button_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/action_log_in"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:background="#62757B"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/tv_createID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="60dp"
            android:text="회원가입을 하시겠습니까?"/>

        <!--<ImageView
            android:id="@+id/iv_adimg"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ad4"
            />-->

    </LinearLayout>

    <!--광고넣을 레이아웃-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_horizontal">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" /><!--@string/banner_ad_unit_id-->

    </LinearLayout>

</LinearLayout>